2001-09-13  Earnie Boyd  <earnie@SF.net>

	* lib/Makefile.in (inst_includedir): Change to always use w32api
	subdirectory for target == cygwin.
	(inst_libdir): Ditto.

2001-09-13  Earnie Boyd  <earnie@SF.net>

	* lib/Makefile.in (config_prefix): New variable.
	(inst_includedir): Manipulate special value only if target == cygwin
	and build == target and prefix != config_prefix.
	(inst_libdir): Ditto.

2001-09-12  Earnie Boyd  <earnie@SF.net>

	* Makefile.in (TARFLAGS): New variable.
	(TARFILEEXT): Ditto.

2001-09-12  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Increment version.
	* include/w32api.h: Ditto.
	* lib/Makefile.in: Add usr/ to install directory special for cygwin.

2001-09-11  Danny Smith  <dannysmith@users.sourceforge.net>

 	* include/winnt.h (_[U]LARGE_INTEGER): Protect nameless struct with
	!defined(NONAMELESSUNION), rather than defined(_ANONYMOUS_STRUCT).
	(_REPARSE_DATA_BUFFER): Name union field DUMMYUNIONNAME.

2001-09-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wininet.h (InternetAutodial): Add prototype. 
	(InternetAutodialHangup): Ditto.
	(InternetDial): Ditto.
	(InternetGetConnectedState): Ditto.
	(InternetGoOnline): Ditto.
	(InternetHangUp): Ditto. 
	(InternetSetDialState): Ditto.
	Add associated INTERNET_* auto dial flags.
	Guard typedefs and prototypes with #ifndef RC_INVOKED.

2001-09-04  Earnie Boyd  <earnie@SF.Net>

	* lib/Makefile.in: Move the setting of variable libdir to after the
	setting of exec_prefix since the value of libdir is dependant on it.

Tue Sep  4 14:15:59 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winbase.h: Add missing closing parentheses to
	InterlockedExchangePointer declaration.

2001-09-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (CFSTR_* ): Add new defines.
	Thanks to: "Ron" <ron@debian.org> . 
	Unicode them.

Sat Sep  1 10:40:37 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winnt.h: Use defined(_ANONYMOUS_STRUCT) to determine if