@@ -634,10 +634,19 @@ extern "C" {
 #define LVCF_WIDTH	2
 #define LVCF_TEXT	4
 #define LVCF_SUBITEM	8
+#if (_WIN32_IE >= 0x0300)
+#define LVCF_IMAGE 16
+#define LVCF_ORDER 32
+#endif
 #define LVCFMT_LEFT	0
 #define LVCFMT_RIGHT	1
 #define LVCFMT_CENTER	2
 #define LVCFMT_JUSTIFYMASK	3
+#if (_WIN32_IE >= 0x0300)
+#define LVCFMT_BITMAP_ON_RIGHT 4096
+#define LVCFMT_COL_HAS_IMAGES  32768
+#define LVCFMT_IMAGE 2048 
+#endif
 #define LVM_GETCOLUMNA	(LVM_FIRST+25)
 #define LVM_GETCOLUMNW	(LVM_FIRST+95)
 #define LVM_SETCOLUMNA	(LVM_FIRST+26)
