@@ -1,3 +1,7 @@
+2001-09-17  Mattia Barbon  <mbarbon@dsi.unive.it>
+
+	* include/commctrl.h: Add some ListView constants.
+
 2001-09-13  Earnie Boyd  <earnie@SF.net>
 
 	* lib/Makefile.in (inst_includedir): Change to always use w32api
